<resources>
    <string name="app_name">翻译帮</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="savePassword">记住密码</string>
    <string name="forgetPassword">忘记密码?</string>
    <string name="login">登录</string>
    <string name="loginLaw1">登录即代表阅读并同意</string>
    <string name="loginLaw2">服务条款</string>
    <string name="leave">退出</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="unserDetail">用户详情</string>
</resources>
