<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">

        <include layout="@layout/common_title"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:layout_marginStart="16sp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:layout_marginStart="16sp"
            android:layout_marginTop="20sp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginEnd="16sp"
            android:layout_marginStart="16sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/login_selector"
            android:text="@string/login"
            android:textColor="@color/colorTitle"
            android:textSize="20sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/savePassCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginTop="10sp"/>

            <TextView
                android:id="@+id/savePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/savePassCheck"
                android:layout_toEndOf="@id/savePassCheck"
                android:text="@string/savePassword"
                android:textColor="@color/login_textview_selector"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/savePassCheck"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16sp"
                android:autoLink="none"
                android:text="@string/forgetPassword"
                android:textColor="@color/login_textview_selector"
                android:textSize="14sp"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginBottom="16sp"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/loginLaw1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:text="@string/loginLaw1"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/loginLaw2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:text="@string/loginLaw2"
            android:textColor="@color/login_textview_selector"
            android:textSize="14sp"/>

    </LinearLayout>


</LinearLayout>